Fixing the vison service face/object detection
